--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "CommonJS",
         "esModuleInterop": true,
-        "outDir": "./bin/lib"
+        "outDir": "./bin"
     }, "include": [
         "./src/**/*.ts"
     ]
