--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "./node_modules/.bin/tsc",
-    "clean": "rm -rf ./bin/lib/",
+    "clean": "rm -rf ./bin/common && rm -rf ./bin/create-*",
     "watch": "./node_modules/.bin/tsc --watch",
     "link": "npm link",
     "unlink": "npm unlink create-mongo-in-docker && npm uninstall -g create-mongo-in-docker"
