--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "",
   "bin": {
-    "create-mongo-in-docker": "./bin/index.js"
+    "create-in-docker": "./bin/_index.js"
   },
   "files": [
     "./bin/**/*.*"
