--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "create-in-docker": "bin/_index.js"
   },
   "files": [
-    "bin/_index.js",
-    "bin/index.js",
-    "bin/mongodb.js"
+    "bin/*",
+    "README.md"
   ],
   "scripts": {
     "build": "npm run compile && npm run bundle",
