--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "create-in-docker",
   "version": "0.3.4",
   "description": "A simple NPX script to quickly setup [Mongo DB] in a [Docker] Container within an NPM project. You can run this command to add [Mongo DB] to an existing project or you can create a new one -- the script detects your existing ```package.json``` file if it exists, and creates a new one if it doesn't.",
+  "main": "bin/_index.js",
   "bin": {
     "create-in-docker": "bin/_index.js"
   },
@@ -36,7 +37,6 @@
     "webpack": "^5.72.0",
     "webpack-node-externals": "^3.0.0"
   },
-  "main": "webpack.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TylerDurham/create-in-docker.git"
