--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
         "module": "CommonJS",
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "outDir": "./build",
+        "outDir": "build",
         "target": "ES2016"
     }, "include": [
         "./src/**/*.ts"
-    ]
+    ], "exclude": ["gulpfile.js"]
 }
