--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.2",
-    "global": "^4.4.0"
+    "global": "^4.4.0",
+    "yaml": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
