--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.2",
+    "cross-spawn": "^7.0.3",
     "global": "^4.4.0",
     "yaml": "^2.0.1"
   },
