--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "yaml": "^2.0.1"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.2",
     "@types/node": "^17.0.31",
     "concurrently": "^7.1.0",
     "del": "^6.0.0",
